[gd_scene load_steps=2 format=3 uid="uid://4qmaxq5y4w1s"]

[ext_resource type="Script" path="res://Scenes/GameScene.gd" id="1_u74h6"]

[node name="GameScene" type="Node2D"]
script = ExtResource("1_u74h6")

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="SongPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="FeedbackAudioPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="FeedbackGameScoring" type="AudioStreamPlayer2D" parent="."]
